<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomePage"
    style="@style/HomePageColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        style="@style/AppTheme">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblIntro"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:typeface="serif"
                android:singleLine="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgHome"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lblTagline"
                android:id="@+id/textView19"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:typeface="serif"
                android:singleLine="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lblTaglineTwo"
                android:id="@+id/textView20"
                android:typeface="serif"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnSignIn"
                android:id="@+id/btnSign"
                android:layout_gravity="center_horizontal"
                android:textColor="#ff2228"
                android:textStyle="bold|italic"
                android:textAlignment="center"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCreate"
                android:id="@+id/btnAccount"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textAlignment="center"
                android:onClick="onClick"
                android:textColor="#1426ff" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
