<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kgreen.finalproject.SignIn"
    style="@style/SignIn">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/SignInHeader"
            android:id="@+id/textView27"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textAlignment="center"
            style="@style/SignIn" />
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignInBtn"
            android:id="@+id/signIn"
            android:layout_gravity="bottom"
            android:layout_below="@+id/textView29"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblPasswordSignIn"
            android:id="@+id/textView29"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernnameSignIn"
            android:layout_above="@+id/textView29"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="46dp"
            android:layout_toRightOf="@+id/signIn"
            android:layout_toEndOf="@+id/signIn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lblUserNameSignIn"
            android:id="@+id/textView28"
            android:layout_alignBottom="@+id/usernnameSignIn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordSignIn"
            android:layout_alignBottom="@+id/textView29"
            android:layout_alignRight="@+id/usernnameSignIn"
            android:layout_alignEnd="@+id/usernnameSignIn"
            android:layout_alignLeft="@+id/usernnameSignIn"
            android:layout_alignStart="@+id/usernnameSignIn"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/errorTxt"
            android:layout_marginTop="42dp"
            android:layout_below="@+id/signIn"
            android:layout_centerHorizontal="true"
            android:textColor="#ec1222"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="@string/lblErrorSignIn"
            android:textAlignment="center" />

    </RelativeLayout>

</RelativeLayout>
