<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kgreen.finalproject.NewAccount"
    style="@style/NewAccountColor">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/NewAccountLbl"
                    android:id="@+id/textView"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textAlignment="center"
                    android:textSize="40dp"
                    android:layout_column="0"
                    style="@style/NewAccountColorTitle" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lblFirstName"
                        android:id="@+id/textView2"
                        android:layout_alignTop="@+id/FirstTxt"
                        android:layout_alignRight="@+id/textView3"
                        android:layout_alignEnd="@+id/textView3"
                        android:layout_column="0" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords|textPersonName"
                        android:ems="10"
                        android:id="@+id/FirstTxt"
                        android:layout_below="@+id/textView"
                        android:layout_toRightOf="@+id/textView2"
                        android:layout_toEndOf="@+id/textView2"
                        android:layout_column="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lblLast"
                        android:id="@+id/textView3"
                        android:layout_below="@+id/textView2"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords|textPersonName"
                        android:ems="10"
                        android:id="@+id/LastTxt"
                        android:layout_alignBottom="@+id/textView3"
                        android:layout_toRightOf="@+id/textView3"
                        android:layout_toEndOf="@+id/textView3"
                        android:layout_column="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lblEmail"
                        android:id="@+id/textView4"
                        android:layout_below="@+id/textView3"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/EmailTxt"
                        android:layout_alignBottom="@+id/textView4"
                        android:layout_toRightOf="@+id/textView3"
                        android:layout_toEndOf="@+id/textView3"
                        android:layout_column="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lblUsername"
                        android:id="@+id/textView5"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/UsernameTxt"
                        android:layout_centerVertical="true"
                        android:layout_alignLeft="@+id/EmailTxt"
                        android:layout_alignStart="@+id/EmailTxt"
                        android:layout_alignRight="@+id/EmailTxt"
                        android:layout_alignEnd="@+id/EmailTxt"
                        android:layout_column="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lblPhone"
                        android:id="@+id/textView6"
                        android:layout_below="@+id/textView5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/NumberTxt"
                        android:layout_above="@+id/PasswordTxt"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_column="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblPassword"
                        android:id="@+id/textView7"
                        android:layout_below="@+id/textView6"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/PasswordTxt"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                        android:layout_above="@+id/textView8"
                        android:layout_toRightOf="@+id/radioGroup"
                        android:layout_toEndOf="@+id/radioGroup"
                        android:layout_column="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/Age"
                        android:id="@+id/textView8"
                        android:layout_column="0" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/AgeTxt"
                        android:layout_column="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                        </TableRow>

                </TableRow>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblGender"
                        android:id="@+id/textView9"
                        android:layout_below="@+id/textView7"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0" />
                </TableRow>

                <TableRow>
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:orientation="horizontal"
                        android:id="@+id/genderNewAcc">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblMale"
                        android:id="@+id/MaleRadio" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lblFemale"
                        android:id="@+id/FemaleRadio" />
                    </RadioGroup>
                </TableRow>


                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <TableRow>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnNext"
                    android:id="@+id/nextBtn"
                    android:onClick="onClick" />
            </TableRow>
            </TableLayout>
        </ScrollView>
    </HorizontalScrollView>


</RelativeLayout>
